# spout

./: .gitignore  CHANGELOG.md  LICENSE  QuickStart.ahk  README.md  pyproject.toml
scripting/: package.json
scripting/example_evolution_pipeline/: README.md  evolution_pipeline.mjs
scripting/example_novel_writer/: Readme.md  novel_writer.mjs
scripting/example_phrase_factory/: README.md  phrase_factory.mjs
scripting/example_text_factory/: README.md  text_factory.mjs
spout/: ExampleConsoleColemak.ahk  ExampleConsoleDvorak.ahk  ExampleConsoleQwerty.ahk  SpoutMain.ahk  __init__.py  spout_cli.py
spout/config/: example_models.ini  example_settings.ini  example_themes.ini
spout/core/: __init__.py
spout/core/converse/: cli_info.py  script.ahk  spout_converse.py
spout/core/enhance/: cli_info.py  script.ahk
spout/core/evaluate/: cli_info.py  script.ahk  spout_evaluate.py
spout/core/expand/: cli_info.py  script.ahk
spout/core/generate/: cli_info.py  script.ahk  spout_generate.py
spout/shared/: BaseGui.ahk  Includes.ahk  IncludesGenerator.ahk  __init__.py  api_logging.py  base_handler.py  connector.py  plugin_options.py  spout_base_functions.py  test_runner.py  token_count.pyw
testing/core_testing/: test_core.bat  test_core.sh  test_gamut.bat  test_gamut.sh
testing/generate_samples/: generate_core_samples.bat  generate_core_samples.sh
testing/prompt_runners/: prompt_gamut.bat  prompt_gamut.sh  prompt_runner.bat  prompt_runner.sh
testing/prompts/: basic-examples.txt  hard-examples.txt  medium-examples.txt  trolley-examples.txt
(+75 files in other folders)
